--- a/array_methods/copyWithin.html
+++ b/array_methods/copyWithin.html
@@ -3,11 +3,169 @@
   // Prototype Function
 
   // Requirements:
+  // It should shallow copy the sequence to targetIndex.
+  // If targetIndex is negative, targetIndex is treated as array.length + targetIndex.
+  // If targetIndex is greater than the length of the array, nothing will be copied.
+  // If targetIndex is positioned after startIndex, the copied sequence is trimmed to fit the length of the array.
+  // If no targetIndex, it should return the array.
+
+  // It should return the modified array.
+  // It should not modify the length of the array.
+  
+  // If no startIndex, it should begin copy elements from index 0.
+  // If startIndex, it should begin copying elements from startIndex.
+  // If startIndex is negative, startIndex will be counted from the end
+  
+  // If no endIndex, it will copy until the last index.
+  // If endIndex, it will copy elements from startIndex up to endIndex.
+  // If endIndex is negative, end will be counted from the end.
+  
+  // If targetIndex is a decimal, it should use its truncated value as targetIndex.
+  // If startIndex is a decimal, it should use its truncated value as startIndex.
+  // If endIndex is a decimal, it should use its truncated value as endIndex.
+
+  function copyWithin(array, targetIndex, startIndex, endIndex) {
+      if (targetIndex >= array.length) {
+        return array;
+      }
+
+      var start = 0
+      var end = array.length;
+      
+      // targetIndex
+      if (targetIndex < 0) {
+        targetIndex = array.length + targetIndex;
+      }
+
+      // startIndex
+      if (arguments.length >= 3) {
+        if (startIndex < 0) {
+          startIndex = array.length + startIndex;
+        }
+        start = startIndex;
+      }
+
+      // endIndex
+      if (arguments.length === 4) {
+        if (endIndex < 0) {
+          endIndex = array.length + endIndex;
+        }
+        end = endIndex;
+      }
+
+      // hold a copy of sequence
+      var copyOfSequenceElements = [];
+      for (var i = start; i < end; i++) {
+        copyOfSequenceElements.push(array[i]);
+      }
+
+      if (targetIndex > startIndex) {
+        end = array.length;
+      }
+
+      var j = 0;
+      for (var i = targetIndex; i < copyOfSequenceElements.length; i++) {
+        array[i] = copyOfSequenceElements[j++];
+      }
+
+      return array;
+    }
 
   tests({
-    '': function() {
-      fail();
+    'It should shallow copy the sequence to targetIndex.': function() {
+      var array = [1, 2];
+      copyWithin(array, 1);
+      eq(array[0], 1);
+      eq(array[1], 1);
+    },
+    'If targetIndex is negative, targetIndex is treated as array.length + targetIndex.': function () {
+      var array = [1, 2];
+      copyWithin(array, -1);
+      eq(array[1], 1);
+    },
+    'If targetIndex is greater than the length of the array, nothing will be copied.': function () {
+      var array = [1];
+      copyWithin(array, 2);
+      eq(array[0], 1);
+    },
+    'If targetIndex is positioned after startIndex, the copied sequence is trimmed to fit the length of the array.': function () {
+      var array = [1, 2, 3];
+      var originalLength = array.length;
+      copyWithin(array, 1, 0);
+      eq(array.length, originalLength);
+      eq(array[0], 1);
+      eq(array[1], 1);
+      eq(array[2], 2);
+    },
+    'If no targetIndex, it should return the array.': function () {
+      var array = [1];
+      var copyWithinResult = copyWithin(array);
+      eq(copyWithinResult, array);
+      eq(array[0], 1);
+    },
+    'It should return the modified original array.': function() {
+      // this is my replacement for doing the foreach approach in every test case similar to other approaches
+      // essentially, ensure once that the returned array is the same as input
+      var originalArray = [1];
+      var copyWithinResult = copyWithin(originalArray, 0);
+      eq(originalArray, copyWithinResult);
+    },
+    'It should not modify the length of the array.': function() {
+      var array = [1, 2];
+      var originalLength = array.length;
+      copyWithin(array, 0, 1);
+      eq(array.length, originalLength);
+    },
+    'If no startIndex, it should begin copy elements from index 0.': function () {
+      var array = [1, 2];
+      copyWithin(array, 0);
+      eq(array[0], 1);
+      eq(array[1], 2);
+    },
+    'If startIndex is negative, startIndex will be counted from the end.': function () {
+      var array = [1, 2, 3];
+      copyWithin(array, 0, -2);
+      eq(array[0], 2);
+      eq(array[1], 3);
+      eq(array[2], 3);
+    },
+    'If no endIndex, it will copy until the last index.': function () {
+      var array = [1, 2];
+      copyWithin(array, 0, 1);
+      eq(array[1], 2);
+    },
+    'If endIndex, it will copy elements from startIndex up to endIndex.': function () {
+      var array = [1, 2, 3];
+      copyWithin(array, 0, 1, 2);
+      eq(array[0], 2);
+      eq(array[1], 2);
+      eq(array[2], 3);
+    },
+    'If endIndex is negative, end will be counted from the end.': function () {
+      var array = [1, 2, 3];
+      copyWithin(array, 0, 1, -1);
+      // console.log(array);
+      eq(array[0], 2);
+      eq(array[1], 2);
+      eq(array[2], 3);
+    },
+    'It should work for array-like objects': function() {
+      var obj = {
+        length: 5,
+        3: 1
+      }
+      copyWithin(obj, 0, 3);
+      eq(obj[0], 1);
     }
+    // 'If targetIndex is a decimal, it should use its truncated value as targetIndex.': function () {
+    //   fail();
+    // },
+    // 'If startIndex is a decimal, it should use its truncated value as startIndex.': function () {
+    //   fail();
+    // },    
+    // 'If endIndex is a decimal, it should use its truncated value as endIndex.': function () {
+    //   fail();
+    // }    
   })
 
 </script>
